# custodio

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
custodio/: __init__.py  __main__.py  anthropic_payload.py  audit.py  cli.py  config.py  dashboard.py  operators.py  pii.py  proxy.py  regex_engine.py  streaming.py
custodio/assets/: OFL.txt
tests/: test_anonymization_fixes.py  test_audit_store.py  test_guidance.py  test_operators_real.py  test_payload.py  test_pii_helpers.py  test_proxy_integration.py  test_proxy_security.py  test_streaming.py  test_streaming_fixes.py
