# Copyright (c) 2026 Leonardo Boquillon
# SPDX-License-Identifier: MIT
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custodio"
version = "1.0.0"
description = "A transparent PII-anonymizing reverse proxy for the Anthropic API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Leonardo Boquillon", email = "lboquillon@gmail.com" }]
keywords = ["anthropic", "claude", "pii", "anonymization", "presidio", "proxy", "privacy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: Proxy Servers",
]

# Base dependencies. presidio-anonymizer is lightweight (no spaCy) and powers
# both the reversible operators and the regex engine.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "presidio-anonymizer>=2.2.355",
]

[project.optional-dependencies]
# Full named-entity detection (PERSON / LOCATION / ORG ...). Needs a spaCy model,
# installed separately: `python -m spacy download en_core_web_lg`.
full = ["presidio-analyzer>=2.2.355"]
# Maximum-accuracy detection via a spaCy transformer model (en_core_web_trf).
# Heavy (pulls in torch); install alongside [full] and download the model.
transformers = ["presidio-analyzer>=2.2.355", "spacy-transformers>=1.3"]
# Redis-backed, shared, persistent audit store + live pub/sub (CUSTODIO_REDIS_URL).
redis = ["redis>=5"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "redis>=5", "fakeredis>=2.20"]

[project.scripts]
custodio = "custodio.cli:main"

[project.urls]
Homepage = "https://github.com/lboquillon/custodio"
Source = "https://github.com/lboquillon/custodio"
Newsletter = "https://leoinai.substack.com/"

[tool.hatch.build.targets.wheel]
packages = ["custodio"]
artifacts = ["custodio/assets/*.woff2", "custodio/assets/OFL.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Embedded HTML/CSS/JS dashboard and long regex patterns are exempt from E501.
"custodio/proxy.py" = ["E501"]
"custodio/regex_engine.py" = ["E501"]
"custodio/dashboard.py" = ["E501"]
"tests/*" = ["E501"]
